BEEWEB-194 Fix problem with font colors having little contrast

--- a/src/octoprint/static/css/bee.css
+++ b/src/octoprint/static/css/bee.css
@@ -1761,7 +1761,9 @@ label:hover:before {
 .muted {
     color: #737373 !important;
 }
-
+.entry .muted {
+    color: #ccc !important;
+}
 /*-----------------------------------------------------------------------------------------------------*/
 /*--------------------------------------      MEDIA QUERIES      --------------------------------------*/
 
